crates/protosearch-plugin/src/snapshots/protosearch_plugin__tests__enum.snap
---
source: crates/protosearch-plugin/src/lib.rs
expression: "output_for(& resp, \"tests.EnumTestCase\")"
---
{
  "tests.EnumTestCase.json": {
    "properties": {
      "status_inferred": {
        "type": "keyword"
      },
      "status_integer": {
        "type": "integer"
      },
      "status_keyword": {
        "type": "keyword"
      }
    }
  }
}
