crates/protosearch-plugin/src/snapshots/protosearch_plugin__tests__fielddata.snap
---
source: crates/protosearch-plugin/src/lib.rs
expression: "output_for(& resp, \"tests.FieldDataTestCase\")"
---
{}
