crates/protosearch-plugin/src/snapshots/protosearch_plugin__tests__list_fielddata.snap
---
source: crates/protosearch-plugin/src/lib.rs
expression: "output_for(& resp, \"tests.ListFielddataCase\")"
---
{
  "tests.ListFielddataCase.json": {
    "properties": {
      "field": {
        "fielddata": [
          "a",
          true
        ],
        "type": "text"
      }
    }
  }
}
