crates/protosearch-plugin/src/snapshots/protosearch_plugin__tests__nested.snap
---
source: crates/protosearch-plugin/src/lib.rs
expression: "output_for(& resp, \"tests.NestedCase\")"
---
{
  "tests.NestedCase.json": {
    "properties": {
      "sub": {
        "properties": {
          "value": {
            "type": "keyword"
          }
        },
        "type": "nested"
      }
    }
  }
}
