crates/protosearch-plugin/src/snapshots/protosearch_plugin__tests__no_target.snap
---
source: crates/protosearch-plugin/src/lib.rs
expression: "output_for(& resp, \"tests.FieldTestCase\")"
---
{
  "tests.FieldTestCase.json": {
    "properties": {
      "basic": {
        "analyzer": "english",
        "boost": 3.14,
        "coerce": true,
        "copy_to": [
          "copy_field"
        ],
        "doc_values": true,
        "dynamic": "strict",
        "eager_global_ordinals": true,
        "enabled": true,
        "fielddata": true,
        "fields": {
          "raw": {
            "type": "keyword"
          }
        },
        "format": "yyyy-MM-dd",
        "ignore_above": 256,
        "ignore_malformed": false,
        "index": true,
        "index_options": "positions",
        "index_phrases": true,
        "index_prefixes": {
          "max_chars": 15,
          "min_chars": 5
        },
        "meta": {
          "unit": "ms"
        },
        "normalizer": "lowercase",
        "norms": true,
        "null_value": "NULL",
        "position_increment_gap": 100,
        "search_analyzer": "english",
        "similarity": "BM25",
        "store": true,
        "subobjects": false,
        "term_vector": "with_positions",
        "type": "text"
      },
      "foo": {
        "type": "keyword"
      },
      "output_target": {
        "type": "keyword"
      }
    }
  }
}
