crates/protosearch-plugin/src/snapshots/protosearch_plugin__tests__null_fielddata.snap
---
source: crates/protosearch-plugin/src/lib.rs
expression: "output_for(& resp, \"tests.NullFielddataCase\")"
---
{
  "tests.NullFielddataCase.json": {
    "properties": {
      "field": {
        "fielddata": null,
        "type": "text"
      }
    }
  }
}
