crates/protosearch-plugin/src/snapshots/protosearch_plugin__tests__struct_fielddata.snap
---
source: crates/protosearch-plugin/src/lib.rs
expression: "output_for(& resp, \"tests.StructFielddataCase\")"
---
{
  "tests.StructFielddataCase.json": {
    "properties": {
      "field": {
        "fielddata": {
          "setting": "value"
        },
        "type": "text"
      }
    }
  }
}
